--- a/style.css
+++ b/style.css
@@ -1,413 +1,51 @@
 @font-face {
     font-family: 'poppins';
-    src: url(./Poppins/Poppins-Regular.ttf) format('truetype');
+    src: url(../fonts/Poppins-Regular.ttf) format('truetype');
 }
 *{
     font-family: 'poppins';
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-}
-:root{
-    --bg-color: #1f103f;
-    --text-color: #fff;
-    --main-color: #a519bb;
-
-    --big-font:4rem;
-    --p-font:1.1rem;
-}
-body{
-    background: var(--bg-color);
-    color: var(--text-color);
-    overflow-x: hidden;
-}
-header{
-    position: fixed;
-    top:0;
-    right: 0;
-    width: 100%;
-    z-index: 1000;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 32px 15%;
-    background: transparent;
-    transition: all ease .45s;
-}
-.logo{
-    color: var(--text-color);
-    font-size: 41px;
     font-weight: 600;
-}
-.logo span{
-    color: var(--main-color);
-}
-.Navbar{
-    display: flex;
-}
-.Navbar a{
-    font-size: var(--p-font);
-    font-weight: 500;
-    color: var(--text-color);
-    margin: 0 25px;
-    transition: all ease .50s;
-}
-.Navbar a:hover{
-    color: var(--main-color)
-}
-.Navbar a.active{
-    color: var(--main-color);
-}
-.menu-btn{
-    background: linear-gradient(130.08deg, #383528 0%, #191919 100%);
-    box-shadow: 0px 20px 40px #00000070;
-    border:1px solid #3b3b3b;
-    padding: 10px 20px;
-    border-radius: 100px;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-}
-#menu-icon{
-    font-size: 28px;
-    margin-left: 10px;
-    z-index: 6;
-}
-section{
-    padding: 0 15%;
-}
-.home{
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap:30px;
-}
-.home-img{
-    width: 730px;
-    height: 730px;
-}
-.home-img img{
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
-.home-text span{
-    padding: 5px 25px;
-    background: linear-gradient(130.08deg, #383528 0%, #191919 100%);
-    box-shadow: 0px 20px 40px #00000070;
-    border:1px solid #3b3b3b;
-    border-radius: 100px;
-    color: var(--text-color);
-    font-weight: 700;
-    font-size: 15px;
-    transform: uppercase;
-}
-.home-text h1{
-    font-size: var(--big-font);
-    margin:23px 0;
-}
-.home-text p{
-    font-size: var(--p-font);
-    font-weight: 400;
-    color: #c3c3c3;
-    line-height: 30px;
-    /*margin-bottom: 30px;*/
-}
-.btn{
-    display: inline-block;
-    padding: 14px 34px;
-    background: var(--main-color);
-    color: var(--text-color);
-    border: 2px solid var(--main-color);
-    font-size: 16px;
-    font-weight: 600;
-    border-radius: 8px;
-    transition: all 0.6s ease-in-out;
-}
-.btn:hover{
-    transform: translateY(-5px);
-    background: transparent;
-    color: var(--main-color);
-}
-.two{
-    background: #141414;
-    border: 2px solid #141414;
-    color: var(--text-color);
-    margin-left: 25px;
-}
-.two:hover{
-    color: #141414;
-    background: var(--text-color);
-    border: 2px solid var(--text-color);
-}
-.share{
-    position: absolute;
-    bottom: 3rem;
-    left: 15%;
-    display: flex;
-    align-items: center;
-}
-.share p{
-    font-size: 17px;
-    color: var(--text-color);
-    margin-right: 25px;
-}
-.social i{
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    height: 45px;
-    width: 45px;
-    background: linear-gradient(130.08deg, #383528 0%, #191919 100%);
-    box-shadow: 0px 20px 40px #00000070;
-    border:1px solid #3b3b3b;
-    border-radius: 50%;
-    color: var(--text-color);
-    font-size: 20px;
-    margin: 0 7px;
-    transition: all 0.6s ease-in-out;
-}
-.social i:hover{
-    transform: translateY(-10px);
-
-}
-@media (max-width: 1850px){
-    header{
-        padding: 15px 8%;
-        transition: .2s;
-    }
-    section{
-        padding: 0 8%;
-        transition: .2s;
-    }
-    .share{
-         left: 8%;
-         transition: .2s;
-    }
-}
-@media (max-width: 1370){
-    header{
-        padding: 15px 4%;
-        transition: .2s;
-    }
-    section{
-        padding: 0 4%;
-        transition: .2s;
-    }
-    .share{
-         left: 4%;
-         transition: .2s;
-    }
-    :root{
-        --big-font:2.2rem;
-        --p-font:1rem;
-        transition: .2s;
-    }
-}
-@media (max-width: 1020px){
-    .Navbar a{
-        margin: 0 15px;
-    }
-    :root{
-        --big-font:2.2rem;
-        --p-font:1rem;
-        transition: .2s;
-    }
-}
-@media (max-width: 950px){
-    .share{
-        display: none;
-    }
-    section{
-        padding:70px 4;
-    }
-    header{
-        padding: 11px 4%;
-        background: #2d2d2d;
-    }
-    .home{
-        height: auto;
-        display: flex;
-        flex-wrap: wrap;
-    }
-    .home-text{
-        order: 2;
-    }
-    .home-img{
-        margin:auto;
-        height: auto;
-        width: auto;
-        padding-top: 100px;
-    }
-    .home-img img{
-        max-width: 450px;
-        width: 100%;
-        height: auto;
-        
-    }
-}
-@media (max-width: 850px){
-    .Navbar{
-        position: absolute;
-        width: 100%;
-        height: 100vh;
-        padding: 40px 50px;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left:100%;
-        display: flex;
-        flex-direction: column;
-        background: #2d2d2d;
-        transition: all 0.4s ease-in-out;
-    }
-    .Navbar a{
-        display: block;
-        color: #c3c3c3;
-        padding: 0px;
-        margin: 0px 0px 40px 0px;
-        font-size: 2rem;
-        font-weight: 400;
-    }
-    .Navbar .open{
-       left: 0; 
-    }   
-}
-@media (max-width: 500px){
-    :root{
-        --big-font:2.2rem;
-        --p-font:15px;
-        transition: .2s;
-    }
-    .btn{
-        padding: 9px 28px;
-    }
-}
-@media (max-width: 1024px){
-    .home{
-        height: 130vh;
-    }
-    .share{
-        bottom: 0px;
-        position:fixed;
-        left: 550px;
-        z-index: -98;
-    }
-}
-@media (max-width: 1500px){
-    .home{
-        height: 130vh;
-    }
-    .share{
-        bottom: 0px;
-        position:fixed;
-        left: 550px;
-        z-index: -98;
-    }
-}
-@media (max-width: 2000px){
-    .home{
-        height: 130vh;
-    }
-    .share{
-        bottom: 0px;
-        position:fixed;
-        left: 550px;
-        z-index: -98;
-    }
-}
-
-.home-img img{
-    animation: imgg 2s ease-in-out infinite;
-    animation-delay: 2s;
-}
-@keyframes imgg{
-    0%{
-        transform: translateY(0);
-    }
-    50%{
-        transform: translateY(-22px);
-    }
-    100%{
-        transform: translateY(0);
-    }
-}
-.hamburger{
-    position: relative;
-    display: block;
-    width: 35px;
-    height: 35px;
-    cursor: pointer;
-    appearance: none;
-    background: none;
-    outline: none;
-    border:none;
-
-}
-
-.hamburger .bar, .hamburger:after, .hamburger:before {
-    content:'';
-    display: block;
-    width: 100%;
-    height: 5px;
-    background-color: #fff;
-    margin: 6px 0px;
-    transition: 0.4s
-}
-
-.hamburger.is-active:before{
-    transform: rotate(-45deg) translate(-8px, 6px); 
-
-}
-
-.hamburger.is-active:after{
-    transform: rotate(45deg) translate(-9px, -8px); 
-
-}
-
-.hamburger.hamburger.is-active .bar{
-    opacity: 0;
-}
-.mobile-nav {
-    position:fixed;
-    top: 0;
-    left: 100%;
-    width: 100%;
-    min-height: 100vh;
-    display: block;
-   background-color: #12002f;
-   padding-top: 120px;
-   transition: 0.4s;
-   z-index: 98;
-}
-.mobile-nav.is-active{
-    left:0;
-}
-
-.mobile-nav a{
-    display: block;
-    width: 100%;
-    max-width: 200px;
-    text-align: center;
-    margin: 0 auto 16px;
-    padding:12px 16px;
-    background-color: #1f103f;
+    text-decoration: none;
+    background: #1f103f;
     color: white;
+}
+body a{
     text-decoration: none;
 }
-.mobile-nav a:hover{
-    background-color: #24104f;
+
+.c-item img{
+    height: 100%;
+    object-fit:fill;
+    filter: brightness(0.6);
 }
-@media (min-width: 800px){
-   .mobile-nav{
-    display: none;
-   }
-   .hamburger{
-    display: none;
-   }
+.text-center{
+    padding-top:100px;
+}
+
+span{
+    color:magenta;
+}
+
+.c-item1{
+    height: 300px;
+    background-size:contain;
+    color: white;
+    font-weight: 900;
+    text-align: center;
+}
+
+@media (max-width: 1000px){
+    .logo{
+       display: none;
+    }
+ }
+input{
+    background-color: white;
+}
+textarea{
+    background: white;
 }
